--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,28 @@
 @import '~bootstrap/scss/bootstrap';
+
+$black: #000;
+$success: #008000;
+$white: #fff;
+$error: #f00;
+
+.border {
+  border: 3px solid $black;
+  margin: 20px;
+  padding: 20px;
+}
+
+.success {
+  background-color: $success;
+  color: $white;
+  font-size: 2em;
+}
+
+.failure {
+  background-color: $error;
+  color: $white;
+  font-size: 2em;
+}
+
+.after-auth {
+  display: none;
+}
