--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -19,18 +19,15 @@ body {
   max-height: calc(100vh + 250px);
   max-width: calc(100vw);
   padding: 0 20px;
-  text-align: justify;
 
   .after-auth {
     display: none;
   }
 
   .board {
-    height: 30vh;
-    margin-bottom: 65px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 35vw;
+    margin: 15px auto 30px;
+    max-height: calc(100vh - 75px);
+    max-width: calc(100vh - 250px);
 }
 
   .border {
@@ -48,6 +45,7 @@ body {
     font-size: 4em;
     height: 20vh;
     justify-content: center;
+    min-height: calc(100% / 2);
     text-shadow: 3px 3px rgba(0, 0, 0, .25);
     width: 5vw;
 }
@@ -69,13 +67,7 @@ body {
 
   .col-4 {
     float: none;
-    margin-left: auto;
-    margin-right: auto;
 }
-
-  // div {
-  //   display: inline-block;
-  // }
 
   .failure {
     background-color: $error-bgr;
@@ -89,16 +81,13 @@ body {
   .game-event {
     background-color: $yellow;
     border: 1px solid $black;
-    display: inline-block;
-    float: center;
     font-size: 20px;
     font-style: italic;
     font-variant: small-caps;
     line-height: 1.5;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0 10px;
+    margin: 15px auto;
     text-align: center;
+    width: 30%;
 }
 
   h1 {
@@ -109,11 +98,6 @@ body {
   h3 {
     margin: 10px 5px;
     text-align: center;
-}
-
-  h5 {
-    margin-bottom: 8px;
-    margin-left: 35px;
 }
 
   .message {
